# cargo-quad-apk

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: android-apk.yml  ci.yml
src/: config.rs  main.rs
src/ops/: build.rs  mod.rs  run.rs
test-project/: Cargo.toml
test-project/src/: main.rs
